--- a/_posts/2015-10-19-links.md
+++ b/_posts/2015-10-19-links.md
@@ -2,21 +2,20 @@
 layout: post
 title: "Links #1"
 ---
-
-[GRL - Graffiti Research Lab](http://www.graffitiresearchlab.com/) [EN]
-[Evil Mad Scientist](http://www.evilmadscientist.com/) [EN]
-[Hack a day](http://hackaday.com/) [EN]
-[Make](http://makezine.com/blog/) [EN]
-[Instructables](http://www.instructables.com/) [EN]
-[Dangerous Prototype](http://dangerousprototypes.com/) [EN]
-[Electronic Lab](http://www.electronics-lab.com/blog/) [EN]
-[Daniel Andrade](http://www.danielandrade.net/) [EN]
-[JLR Blog](http://www.jlr-blog.com/) [FR]
-[Tix le Geek](http://tixlegeek.com/) [FR]
-[Furrtek](http://furrtek.free.fr/) [FR]
-[La Grotte Du Barbu](http://www.lagrottedubarbu.com/) [FR]
-[Ferdinand Piette](http://ferdinandpiette.com) [FR]
-[Jared Sanson](http://jared.geek.nz/) [EN]
-[Kevin Rye](http://kevinrye.net/) [EN]
-[My Freescale Web Page](http://myfreescalewebpage.free.fr/) [EN]
-[Sticky Bits](https://blog.feabhas.com) [EN]
+- [GRL - Graffiti Research Lab](http://www.graffitiresearchlab.com/) [EN]
+- [Evil Mad Scientist](http://www.evilmadscientist.com/) [EN]
+- [Hack a day](http://hackaday.com/) [EN]
+- [Make](http://makezine.com/blog/) [EN]
+- [Instructables](http://www.instructables.com/) [EN]
+- [Dangerous Prototype](http://dangerousprototypes.com/) [EN]
+- [Electronic Lab](http://www.electronics-lab.com/blog/) [EN]
+- [Daniel Andrade](http://www.danielandrade.net/) [EN]
+- [JLR Blog](http://www.jlr-blog.com/) [FR]
+- [Tix le Geek](http://tixlegeek.com/) [FR]
+- [Furrtek](http://furrtek.free.fr/) [FR]
+- [La Grotte Du Barbu](http://www.lagrottedubarbu.com/) [FR]
+- [Ferdinand Piette](http://ferdinandpiette.com) [FR]
+- [Jared Sanson](http://jared.geek.nz/) [EN]
+- [Kevin Rye](http://kevinrye.net/) [EN]
+- [My Freescale Web Page](http://myfreescalewebpage.free.fr/) [EN]
+- [Sticky Bits](https://blog.feabhas.com) [EN]
