--- a/_posts/2015-10-19-links.md
+++ b/_posts/2015-10-19-links.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Links #1"
+comments: true
 ---
 - [GRL - Graffiti Research Lab](http://www.graffitiresearchlab.com/) [EN]
 - [Evil Mad Scientist](http://www.evilmadscientist.com/) [EN]
