--- a/_posts/2015-10-19-links.md
+++ b/_posts/2015-10-19-links.md
@@ -3,6 +3,7 @@ layout: post
 title: "Links #1"
 author: 'Rémi Debord'
 comments: true
+tipue_search_active: true
 ---
 - [GRL - Graffiti Research Lab](http://www.graffitiresearchlab.com/) [EN]
 - [Evil Mad Scientist](http://www.evilmadscientist.com/) [EN]
