--- a/_posts/2023-10-27-links.md
+++ b/_posts/2023-10-27-links.md
@@ -3,6 +3,7 @@ layout: post
 title: "Links #2"
 author: 'Rémi Debord'
 comments: true
+tipue_search_active: true
 ---
 - [Guide pour la programmation réseaux de Beej's](http://vidalc.chez.com/lf/socket.html) [FR]
 - [Mirror of git://git.kernel.org/pub/scm/network/tftp/tftp-hpa.git](https://github.com/Distrotech/tftp-hpa) [EN]
