Update search bar style

--- a/_posts/2023-08-20-china-summer-2023.md
+++ b/_posts/2023-08-20-china-summer-2023.md
@@ -3,6 +3,7 @@ layout: post
 title: "China summer 2023"
 author: 'Rémi Debord'
 comments: true
+tipue_search_active: true
 ---
 Page rédigée exceptionnellement en français ayant pour but de relater notre voyage ainsi que de consigner des informations pour la préparation du prochain voyage.
 
